[gd_scene load_steps=40 format=2]

[ext_resource path="res://grafica/NavsTexture/Normal/D/02.png" type="Texture" id=1]
[ext_resource path="res://grafica/NavsTexture/Normal/IDLE/03.png" type="Texture" id=2]
[ext_resource path="res://grafica/NavsTexture/Normal/morte/05.png" type="Texture" id=3]
[ext_resource path="res://grafica/NavsTexture/Normal/E/01.png" type="Texture" id=4]
[ext_resource path="res://grafica/NavsTexture/Normal/morte/09.png" type="Texture" id=5]
[ext_resource path="res://script/Nave.gd" type="Script" id=6]
[ext_resource path="res://grafica/NavsTexture/Normal/morte/08.png" type="Texture" id=7]
[ext_resource path="res://grafica/NavsTexture/Normal/morte/06.png" type="Texture" id=8]
[ext_resource path="res://grafica/NavsTexture/Normal/morte/07.png" type="Texture" id=9]
[ext_resource path="res://prefebs/particulas.tscn" type="PackedScene" id=10]
[ext_resource path="res://grafica/NavsTexture/Normal/D/03.png" type="Texture" id=11]
[ext_resource path="res://grafica/NavsTexture/Normal/E/02.png" type="Texture" id=12]
[ext_resource path="res://grafica/NavsTexture/Normal/D/01.png" type="Texture" id=13]
[ext_resource path="res://grafica/NavsTexture/Normal/E/03.png" type="Texture" id=14]
[ext_resource path="res://grafica/NavsTexture/Normal/E/04.png" type="Texture" id=15]
[ext_resource path="res://grafica/NavsTexture/Normal/IDLE/01.png" type="Texture" id=16]
[ext_resource path="res://grafica/NavsTexture/Normal/D/04.png" type="Texture" id=17]
[ext_resource path="res://grafica/NavsTexture/Normal/morte/04.png" type="Texture" id=18]
[ext_resource path="res://grafica/NavsTexture/Normal/morte/03.png" type="Texture" id=19]
[ext_resource path="res://grafica/NavsTexture/Normal/morte/01.png" type="Texture" id=20]
[ext_resource path="res://grafica/NavsTexture/Normal/morte/02.png" type="Texture" id=21]
[ext_resource path="res://grafica/NavsTexture/Normal/IDLE/04.png" type="Texture" id=22]
[ext_resource path="res://grafica/NavsTexture/Normal/IDLE/02.png" type="Texture" id=23]
[ext_resource path="res://grafica/Eventos/momentum/images/Normal_Effects_07.png" type="Texture" id=24]
[ext_resource path="res://grafica/Eventos/momentum/images/Normal_Effects_02.png" type="Texture" id=25]
[ext_resource path="res://grafica/Eventos/momentum/images/Normal_Effects_06.png" type="Texture" id=26]
[ext_resource path="res://grafica/Eventos/momentum/images/Normal_Effects_01.png" type="Texture" id=27]
[ext_resource path="res://grafica/Eventos/momentum/images/Normal_Effects_04.png" type="Texture" id=28]
[ext_resource path="res://grafica/Eventos/momentum/images/Normal_Effects_05.png" type="Texture" id=29]
[ext_resource path="res://grafica/Eventos/momentum/images/Normal_Effects_08.png" type="Texture" id=30]
[ext_resource path="res://grafica/Eventos/momentum/images/Normal_Effects_03.png" type="Texture" id=31]
[ext_resource path="res://grafica/Eventos/momentum/images/Normal_Effects_09.png" type="Texture" id=32]
[ext_resource path="res://grafica/Eventos/momentum/images/Normal_Effects_10.png" type="Texture" id=33]

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 1 ), ExtResource( 11 ), ExtResource( 17 ) ],
"loop": true,
"name": "andandoD",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 12 ), ExtResource( 14 ), ExtResource( 15 ) ],
"loop": true,
"name": "andandoE",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 21 ), ExtResource( 19 ), ExtResource( 18 ), ExtResource( 3 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 7 ), ExtResource( 5 ) ],
"loop": false,
"name": "morta",
"speed": 26.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 23 ), ExtResource( 2 ), ExtResource( 22 ) ],
"loop": true,
"name": "parada",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ ExtResource( 27 ), ExtResource( 25 ), ExtResource( 31 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 26 ), ExtResource( 24 ), ExtResource( 30 ), ExtResource( 32 ), ExtResource( 33 ) ],
"loop": true,
"name": "default",
"speed": 30.0
} ]

[sub_resource type="CapsuleShape2D" id=15]
radius = 17.0
height = 18.0

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite/Motor_direito:flame_fail")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite/Motor_direito2:flame_fail")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimatedSprite/Motor_direito3:flame_fail")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:coeficiente")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath(".:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Camera2D:offset")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -100 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath(".:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Camera2D:zoom")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Camera2D:current")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=17]
resource_name = "start"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 3.03143 ),
"update": 0,
"values": [ Vector2( 360, 1600 ), Vector2( 358, 860 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:coeficiente")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 2.82843, 1 ),
"update": 0,
"values": [ 13.0, 3.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 0.9, 1 ),
"transitions": PoolRealArray( 2.54912, 1, 3.13834, 1 ),
"update": 0,
"values": [ 16.5, -15.0, 0.0, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.145098, 0.156863, 0.403922, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Camera2D:offset")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -780 ), Vector2( 0, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ), Vector2( 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Camera2D:current")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=18]
resource_name = "transicao"
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.8, 0.8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera2D:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -220 ), Vector2( 0, -74 ) ]
}

[node name="Nave" type="Node2D"]
script = ExtResource( 6 )
coeficiente = 1

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 0, -100 )
current = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -34 )
frames = SubResource( 14 )
animation = "parada"
frame = 1
playing = true
offset = Vector2( 0, 34 )

[node name="NormalEffects" type="AnimatedSprite" parent="AnimatedSprite"]
modulate = Color( 1, 1, 0.592157, 1 )
position = Vector2( 0, 32 )
frames = SubResource( 16 )
frame = 6
playing = true

[node name="Motor_direito" parent="AnimatedSprite" instance=ExtResource( 10 )]
position = Vector2( -1, 47 )

[node name="Motor_direito2" parent="AnimatedSprite" instance=ExtResource( 10 )]
position = Vector2( 15, 60 )

[node name="Motor_direito3" parent="AnimatedSprite" instance=ExtResource( 10 )]
position = Vector2( -15, 60 )

[node name="Arma_ponto" type="Position2D" parent="AnimatedSprite"]
position = Vector2( 0, -2 )

[node name="GPS" type="Timer" parent="."]
wait_time = 0.5

[node name="Nave" type="Area2D" parent="."]
collision_layer = 129
collision_mask = 129

[node name="C_nave" type="CollisionShape2D" parent="Nave"]
shape = SubResource( 15 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/start = SubResource( 17 )
anims/transicao = SubResource( 18 )

[connection signal="timeout" from="GPS" to="." method="_on_GPS_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
